# jjfb_pc_vmrp_bootkit

./: -  CMakeLists.txt  Cursor_Phase6J_Shell_Publication_Routine_Audit.md  Cursor_Phase6K_Fix_MRPGCMAP_Entry_Order.md  Cursor_Phase6M_CFunction_Publication_Source_Audit.md  Cursor_Phase6P_Shell_Core_Continue.md  JJFB_D5_Blocker_Next_Reference_Advice.md  Native_GWY_JJFB_Full_Boot_MasterPlan.md.lnk  PACKAGE_INDEX.md  README.md  REPO_LAYOUT.md  RUN_BUILD.ps1  RUN_BUILD_VMRP.ps1  RUN_D6_DESCRIPTOR_DIRECT.ps1  RUN_E10A31A_PRECONT_DIAG.ps1  RUN_E10A31C_INIT_ATOMICITY.ps1  RUN_E10A31D_MRC_INIT_PROVENANCE.ps1  RUN_E10A31E_PACKAGE_APPINFO.ps1  RUN_E10A31F_METHOD0_FAILSITE.ps1  RUN_E10A31G_STRCMP_GPT.ps1  RUN_E10A31H_SMSCFG_GPT.ps1  RUN_E10A31J_SMSCFG_LONG_WINDOW.ps1  RUN_E10A31K_SMSCFG_FAST_CLOSE.ps1  RUN_E10A31L_METHOD0_CONFIG_MAP.ps1  RUN_E10A31M_FAIL_2E5404.ps1  RUN_E10A31N_POST_RANGE_PROVENANCE.ps1  RUN_E10A31O_STRSTR_NAPPTYPE.ps1  RUN_E10A31R_A1B8C_PROVENANCE.ps1  RUN_E10A31_GAMELIST_CONTEXT.ps1  RUN_E10A3_GAMELIST_POSTSELECT.ps1  RUN_E10A_GWY_SHELL_PRELAUNCH.ps1  RUN_E2_GAME_PACKAGE_ER_RW_MRCINIT.ps1  RUN_E5_SCHEDULER_POST_START.ps1  RUN_E6_PLATFORM_RET0_CAUSE.ps1  RUN_E7_LIFECYCLE_DRAW.ps1  RUN_E8A_HANDLER_FORENSICS.ps1  RUN_E8B_POST_HANDLER_BLOCKER.ps1  RUN_E8C_IDLE_STATE_EXIT.ps1  RUN_E8D_FLAG_SOURCE.ps1  RUN_E8E_EVENT_ABI.ps1  (+97 more)
GWY_MRP_Launcher_Professional_Reference_Pack_20260721/: 01_GWY_MRP_Launcher_Professional_Reference_20260721.docx  03_Data_Dictionary.md  docx_a11y_report.json
JJFB_E8B_fast_route_analysis_pack/: JJFB_E8B_fast_route_report.md  jjfbol_resource_inventory.csv  jjfbol_versions.csv  log_census.json
Native_GWY_JJFB_Full_Boot_CursorPack/: 00_README.md  04_VALIDATION_CHECKLIST_AND_REPORTS.md  05_FORBIDDEN_SHORTCUTS_AND_SAFETY.md
analysis/: WORKSPACE_PARSE_2026-07-24.md  core_file_manifest.csv  product_event_queue_consumer_key_map.txt  repo_rev.txt
build-i686/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build-info.json  build.ninja  cmake_install.cmake
cmake/: GenerateBuildInfo.cmake
decisions/: ADR-0001-DIRECT-DESCRIPTOR-LAUNCH.md  ADR-0003-DECLARATIVE-COMPATIBILITY.md
docs/: 00_READ_ME_FIRST.md  01_ROUTE_CORRECTION.md  05_LAUNCH_CONTRACT.md  06_PLATFORM_ABI_AND_SCHEDULER.md  07_REUSE_AND_MIGRATION.md  09_TEST_AND_ACCEPTANCE.md  10_LOGGING_AND_DIAGNOSTICS.md  15_FIRST_30_TASKS.md  16_CLEAN_REPO_LAYOUT_AND_API_CONTRACTS.md  17_TWO_TRACK_RESEARCH_METHOD.md  REPO_LAYOUT.md
evidence/: anti_drift_negative_validation.json  cfg36_tool_validation.json  current_source_delta.json  gwy_resource_inventory.csv  gwy_resource_inventory_summary.md  jjfb_mrp_tool_validation.json  key_mrp_manifest.json  key_mrp_members.csv  observed_platform_calls.csv  sdk_key_golden.json
game_files/: README_PUT_MYTHROAD_HERE.txt
legacy_lab/: README.md
legacy_lab/JJFB_GWY_LAUNCHER_REBUILD_GUIDE_COMPLETE/templates/clean_repo_skeleton/: CMakeLists.txt
legacy_lab/JJFB_GWY_LAUNCHER_REBUILD_GUIDE_COMPLETE/templates/clean_repo_skeleton/include/launcher/: launch_descriptor.h
legacy_lab/JJFB_GWY_LAUNCHER_REBUILD_GUIDE_COMPLETE/templates/clean_repo_skeleton/src/: launch_descriptor.c
logs/: _c9.py  _case.py  _dis.py  _dump_handlers.py  audit_preflight.json  b71_dispatch_calibrate_console.txt  b71_dispatch_control_console.txt  cfg_scan_preview.txt  d6_descriptor_direct_stderr.txt  d6_descriptor_direct_stdout.txt  d6_vmrp_stdout.txt  e10a31_diag_stdout.txt  e10a31_gamelist_context_stderr.txt  e10a31_gamelist_context_stdout.txt  e10a31a_a_stderr.txt  e10a31a_a_stdout.txt  e10a31a_b_stderr.txt  e10a31a_b_stdout.txt  e10a31a_exit_trace_stderr.txt  e10a31a_exit_trace_stdout.txt  e10a31c_init_atomicity_stderr.txt  e10a31c_init_atomicity_stdout.txt  e10a31d_appinfo_stderr.txt  e10a31d_appinfo_stdout.txt  e10a31d_history_stderr.txt  e10a31d_history_stdout.txt  e10a31d_method0_trace_stderr.txt  e10a31d_method0_trace_stdout.txt  e10a31e_ab_case_a_stderr.txt  e10a31e_ab_case_a_stdout.txt  e10a31e_ab_case_b_stderr.txt  e10a31e_ab_case_b_stdout.txt  e10a31e_package_appinfo_stderr.txt  e10a31e_package_appinfo_stdout.txt  e10a31f_method0_failsite_stderr.txt  e10a31f_method0_failsite_stdout.txt  e10a31g_strcmp_gpt_stderr.txt  e10a31g_strcmp_gpt_stdout.txt  e10a31h_smscfg_gpt_stderr.txt  e10a31h_smscfg_gpt_stdout.txt  (+436 more)
profiles/: jjfb.example.json  jjfb.json
reports/: d5b_cfg_gate_xref.md  d5b_command_dispatch_trigger_result.md  d5b_command_source_audit.md  d5b_gamelist_handler_map.md  d5b_mr_entry_param_consumption.md  d6_descriptor_direct_boot.md  e10a31_environment_manifest.csv  e10a31_launch_param_read_trace.csv  e10a31_process_exit_trace.csv  e10a31_runtime_manifest.csv  e10a31_start_dsm_param_abi.csv  e10a31_timer_binding_trace.csv  e10a31a_ab_environment_diff.csv  e10a31a_ab_milestone_compare.csv  e10a31a_continue_gate_trace.csv  e10a31a_environment_manifest.csv  e10a31a_runtime_manifest.csv  e10a31b_publication_path.csv  e10a31c_environment_manifest.csv  e10a31c_init_sequence_trace.csv  e10a31c_mem_get_trace.csv  e10a31c_process_exit_trace.csv  e10a31c_runtime_manifest.csv  e10a31d_appinfo_contract.csv  e10a31d_environment_manifest.csv  e10a31d_helper_abi_compare.csv  e10a31d_helper_call_history.csv  e10a31d_method0_call_tree.csv  e10a31d_method0_instruction_trace.csv  e10a31d_method0_return_provenance.csv  e10a31d_runtime_manifest.csv  e10a31e_appinfo_ab_compare.csv  e10a31e_appinfo_binding_trace.csv  e10a31e_appinfo_owner_validation.csv  e10a31e_appinfo_read_proof.csv  e10a31e_environment_manifest.csv  e10a31e_gamelist_globals.csv  e10a31e_package_metadata_trace.csv  e10a31e_runtime_manifest.csv  e10a31f_environment_manifest.csv  (+722 more)
schemas/: launcher_profile.schema.json
templates/: PHASE_TASK_TEMPLATE.md
tools/: _decode_305e09.py  _decode_timer_1e209.py  _tmp_dis_gbrw_30d.py  audit_launcher_core.py  d5b_gamelist_static_xref.py  dump_jjfb_downimage_contract.py  e10a31d_helper_dispatch_disasm.py  e10a31f_failsite_disasm.py  e10a31g_cfunction_strcmp_disasm.py  e10a31g_dump_seq_window.py  e10a31g_gpt_offset_probe.py  e10a31h_ptrchain_disasm.py  e10a31m_fail_2e5404_disasm.py  (+69 more)
(+1754 files in other folders)
